# propolis

./: .git-blame-ignore-revs  .gitignore  .licenserc.yaml  605-todo.md  Cargo.toml  README.md  package-manifest.toml  rust-toolchain.toml  testvm.toml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
client/: Cargo.toml
client/src/: api.rs  instance_spec.rs  lib.rs
client/src/instance_spec/: common.rs  mod.rs  v1.rs
common/: Cargo.toml
common/src/: config.rs
crates/bhyve-api/header-check/: Cargo.toml  build.rs
crates/bhyve-api/header-check/test/: main.rs
crates/cpuid-utils/: Cargo.toml
crates/cpuid-utils/src/: bits.rs  host.rs  instance_spec.rs  lib.rs
crates/propolis-api-types/: Cargo.toml
crates/propolis-api-types/src/: disk.rs  instance.rs  lib.rs  migration.rs  serial.rs  v0.rs
crates/propolis-api-types/src/instance_spec/: migration.rs  mod.rs  v0.rs  v1.rs
crates/propolis-server-config/: Cargo.toml
crates/propolis-server-config/src/: lib.rs  spec.rs
crates/propolis-types/: Cargo.toml
crates/propolis-types/src/: lib.rs
crates/rfb/: Cargo.toml  README.md
crates/rfb/examples/: server.rs  shared.rs  socket.rs  websock.rs
crates/rfb/src/: encodings.rs  keysym.rs  lib.rs  pixel_formats.rs  proto.rs  rfb.rs  server.rs  tungstenite.rs
crates/viona-api/: Cargo.toml
crates/viona-api/header-check/: Cargo.toml  build.rs
crates/viona-api/header-check/test/: main.rs
crates/viona-api/src/: ffi.rs  lib.rs
crates/viona-api/sys/: Cargo.toml
crates/viona-api/sys/src/: lib.rs
lib/propolis/: Cargo.toml  build.rs
lib/propolis-client/: Cargo.toml  build.rs
lib/propolis-client/src/: api.rs  generated.rs  instance_spec.rs  lib.rs  support.rs
lib/propolis-client/src/handmade/: api.rs  mod.rs
lib/propolis-client/src/instance_spec/: backends.rs  builder.rs  devices.rs  migration.rs  mod.rs  openapi_impls.rs  to_generated.rs
lib/propolis/src/: accessors.rs  api_version.rs  attachment.rs  attestation.rs  common.rs  cpuid.rs  exits.rs  instance.rs  intr_pins.rs  inventory.rs  lib.rs  lifecycle.rs  migrate.rs  mmio.rs  msr.rs  pio.rs  tasks.rs  vcpu.rs
lib/propolis/src/attestation/: boot_digest.rs  mod.rs  server.rs
lib/propolis/src/block/: attachment.rs  backend.rs  crucible.rs  device.rs  file.rs  id.rs  in_memory.rs  mem_async.rs  minder.rs  mod.rs  noop.rs  noop_sync.rs  tracking.rs
lib/propolis/src/chardev/: file_out.rs  mod.rs  pollers.rs  sock.rs
lib/propolis/src/dispatch/: async_tasks.rs  mod.rs
lib/propolis/src/enlightenment/: bhyve.rs  mod.rs
lib/propolis/src/firmware/: mod.rs
lib/propolis/src/hv_interface/: bhyve.rs  mod.rs
lib/propolis/src/hw/: ibmpc.rs  ids.rs  mod.rs  ps2ctrl.rs  test_util.rs  testdev.rs
lib/propolis/src/util/: aspace.rs  id.rs  mod.rs  regmap.rs  sys.rs
lib/propolis/src/vmm/: data.rs  hdl.rs  machine.rs  mapping.rs  mem.rs  mod.rs  time.rs
lib/propolis/src/vsock/: buffer.rs  mod.rs  packet.rs  poller.rs  poller_stub.rs  proxy.rs
phd-tests/cargo-phd/: Cargo.toml
phd-tests/cargo-phd/src/: main.rs
phd-tests/framework/: Cargo.toml
phd-tests/framework/src/: artifacts.rs  lib.rs  lifecycle.rs  log_config.rs  port_allocator.rs  server_log_mode.rs  zfs.rs
phd-tests/framework/src/artifacts/: buildomat.rs  download.rs  manifest.rs  mod.rs  store.rs
phd-tests/framework/src/disk/: crucible.rs  fat.rs  file.rs  in_memory.rs  mod.rs
phd-tests/framework/src/guest_os/: alpine.rs  debian11_nocloud.rs  linux.rs  mod.rs  shell_commands.rs  ubuntu22_04.rs  ubuntu24_04.rs  windows.rs  windows_server_2016.rs  windows_server_2019.rs  windows_server_2022.rs
phd-tests/framework/src/host_api/: kvm.rs  mod.rs  stubs.rs
phd-tests/framework/src/serial/: mod.rs  raw_buffer.rs  vt100.rs  vt80x24.rs
phd-tests/framework/src/test_vm/: config.rs  environment.rs  factory.rs  metrics.rs  mod.rs  server.rs  spec.rs  vm_config.rs
phd-tests/runner/: Cargo.toml  build.rs
phd-tests/runner/src/: config.rs  execute.rs  filter.rs  fixtures.rs  main.rs  zfs.rs
phd-tests/testcase/: Cargo.toml
phd-tests/testcase/src/: lib.rs
phd-tests/testcase_macro/: Cargo.toml
phd-tests/testcase_macro/src/: lib.rs
phd-tests/tests/: Cargo.toml
phd-tests/tests/src/: acpi.rs  boot_order.rs  cpuid.rs  disk.rs  ensure_api.rs  firmware.rs  framework.rs  hw.rs  hyperv.rs  lib.rs  migrate.rs  server_state_machine.rs  smoke.rs  stats.rs  vsock.rs  xhci.rs
phd-tests/tests/src/boot_order/: efi_utils.rs
phd-tests/tests/src/crucible/: migrate.rs  mod.rs  smoke.rs
phd-tests/tests/testdata/: dirt.sh  posix_dirt.sh
propolis/: Cargo.toml  usdt.d
propolis-client/: Cargo.toml
propolis-client/src/: api.rs  http_client.rs  lib.rs
propolis-server/: Cargo.toml
propolis-server-lib/: Cargo.toml
propolis-server-lib/src/: config.rs  initializer.rs  lib.rs  server.rs
propolis-server-lib/tests/: artifacts.rs  integration_tests.rs
propolis-server/src/: api.rs  config.rs  initializer.rs  main.rs  serial.rs  server.rs
propolis/src/: block.rs  common.rs  exits.rs  instance.rs  intr_pins.rs  inventory.rs  lib.rs  migrate.rs  mmio.rs  pio.rs  vcpu.rs
propolis/src/block/: crucible.rs  file.rs  in_memory.rs  mod.rs
propolis/src/chardev/: file_out.rs  mod.rs  pollers.rs  sock.rs
propolis/src/dispatch/: async_tasks.rs  events.rs  mod.rs  sync_tasks.rs
propolis/src/dispatch/event_ports/: compat.rs  illumos.rs  mod.rs
propolis/src/hw/: ids.rs  mod.rs  ps2ctrl.rs  rtc.rs
propolis/src/hw/bhyve/: atpic.rs  atpit.rs  hpet.rs  ioapic.rs  mod.rs  pmtimer.rs  rtc.rs
propolis/src/util/: aspace.rs  mod.rs  regmap.rs  self_arc.rs
propolis/src/vmm/: data.rs  hdl.rs  machine.rs  mapping.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/lib/: config.rs  initializer.rs  lib.rs  migrate.rs  serial.rs  server.rs  spec.rs  stats.rs  vnc.rs
server/tests/: artifacts.rs  integration_tests.rs
standalone/: Cargo.toml
standalone/src/: config.rs  main.rs  snapshot.rs
xtask/: Cargo.toml
xtask/src/: external.rs  main.rs  task_clippy.rs  task_fmt.rs  task_license.rs  task_phd.rs  task_prepush.rs  task_style.rs  util.rs
(+397 files in other folders)
