[workspace]
resolver = "2"

members = [
  "crates/*",
  "crates/*/sys",
  "bin/*",
  "lib/*",
  "packaging/propolis-package",
  "phd-tests/*",
  "xtask",
]

default-members = [
  "crates/*",
  "crates/*/sys",
  "lib/*",
  "bin/propolis-cli",
  "bin/propolis-server",
  "bin/propolis-standalone",
  "xtask",
]

exclude = [
  "crates/bhyve-api/header-check",
  "crates/viona-api/header-check",
  "phd-tests/buildomat",
]

# If one wants the 'dev' profile, but with "panic = abort" semantics, they
# should opt in with this profile.  Unwinding is required by PHD and
# should_abort cargo tests, and so remains the default for the 'dev' profile.
[profile.dev-abort]
inherits = "dev"
panic = "abort"

# Building for 'release' implies running on a real illumos system, where we
# certainly want (rust) panics to cause an immediate abort and coredump.
[profile.release]
panic = "abort"

[workspace.dependencies]
# Internal crates
bhyve_api = { path = "crates/bhyve-api" }
bhyve_api_sys = { path = "crates/bhyve-api/sys" }
cpuid_profile_config = { path = "crates/cpuid-profile-config" }
dladm = { path = "crates/dladm" }
propolis-server-config = { path = "crates/propolis-server-config" }
propolis_api_types = { path = "crates/propolis-api-types" }
propolis_types = { path = "crates/propolis-types" }
rfb = { path = "crates/rfb" }
rgb_frame = { path = "crates/rgb-frame" }
viona_api = { path = "crates/viona-api" }
viona_api_sys = { path = "crates/viona-api/sys" }

# PHD testing framework
phd-framework = { path = "phd-tests/framework" }
phd-testcase = { path = "phd-tests/testcase" }
phd-testcase-macros = { path = "phd-tests/testcase_macro" }
phd-tests = { path = "phd-tests/tests" }

# Public library crates
propolis = { path = "lib/propolis", default-features = false }
propolis-client = { path = "lib/propolis-client" }

# Propolis cfg(feature = "falcon")
dlpi = { git = "https://github.com/oxidecomputer/dlpi-sys", branch = "main" }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
libloading = "0.7"
p9ds = { git = "https://github.com/oxidecomputer/p9fs" }
softnpu = { git = "https://github.com/oxidecomputer/softnpu" }

# Omicron-related
internal-dns = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
nexus-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
omicron-zone-package = "0.9.0"
oximeter-instruments = { git = "https://github.com/oxidecomputer/omicron", branch = "main", default-features = false, features = ["kstat"] }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }

# Crucible
crucible = { git = "https://github.com/oxidecomputer/crucible", rev = "e58ca3693cb9ce0438947beba10e97ee38a0966b" }
crucible-client-types = { git = "https://github.com/oxidecomputer/crucible", rev = "e58ca3693cb9ce0438947beba10e97ee38a0966b" }

# External dependencies
anyhow = "1.0"
async-trait = "0.1.53"
atty = "0.2.14"
backoff = "0.4.0"
backtrace = "0.3.66"
base64 = "0.21"
bit_field = "0.10.1"
bitflags = "2.4"
bitstruct = "0.1"
bitvec = "1.0"
byteorder = "1"
bytes = "1.1"
camino = "1.1.6"
cargo_metadata = "0.18.1"
cc = "1.0.73"
cfg-if = "1.0.0"
chrono = "0.4.19"
clap = "4.2"
const_format = "0.2"
crossbeam-channel = "0.5"
ctrlc = "3.2"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
erased-serde = "0.4"
errno = "0.2.8"
escargot = "0.5.8"
expectorate = "1.0.5"
fatfs = "0.3.6"
futures = "0.3"
futures-util = "0.3.21"
flate2 = "1.0.28"
hex = "0.4.3"
http = "0.2.9"
hyper = "0.14"
indicatif = "0.17.3"
inventory = "0.3.0"
kstat-rs = "0.2.3"
lazy_static = "1.4"
libc = "0.2"
mockall = "0.12"
newtype-uuid = { version = "1.0.1", features = [ "v4" ] }
owo-colors = "4"
pin-project-lite = "0.2.13"
proc-macro2 = "1.0"
proc-macro-error = "1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", branch = "main" }
quote = "1.0"
rand = "0.8"
reqwest = { version = "0.11.18", default-features = false }
ring = "0.17"
ron = "0.8"
schemars = "0.8.10"
serde = "1.0"
serde_arrays = "0.1"
serde_derive = "1.0"
serde_json = "1.0"
serde_test = "1.0.138"
slog = "2.7"
slog-async = "2.8"
slog-bunyan = "2.4.0"
slog-dtrace = "0.3"
slog-term = "2.8"
strum = "0.26"
syn = "1.0"
tar = "0.4"
tempfile = "3.2"
termwiz = "0.20"
thiserror = "1.0"
tokio = "1"
tokio-tungstenite = "0.21"
tokio-util = "0.7"
toml = "0.7.8"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = "0.3.14"
usdt = { version = "0.5", default-features = false }
uuid = "1.3.2"
zerocopy = "0.7.34"
