[package]
name = "propolis-cli"
version = "0.1.0"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
libc = "0.2"
propolis-client = { path = "../client" }
slog = "2.7"
slog-async = "2.7"
slog-term = "2.8"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.14"
uuid = "0.8"
serde = "1.0"
serde_json = "1.0"
