[package]
name = "propolis-client"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.16"
schemars = { version = "0.8.10", features = [ "uuid1" ] }
serde = "1.0"
serde_json = "1.0"
slog = { version = "2.5", features = [ "max_level_trace", "release_max_level_debug" ] }
structopt = "0.3"
thiserror = "1.0"
uuid = { version = "1.0.0", features = [ "serde", "v4" ] }
crucible = { git = "https://github.com/oxidecomputer/crucible", rev = "cd74a23ea42ce5e673923a00faf31b0a920191cc" }
