[package]
name = "propolis-client"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
schemars = { version = "0.8", features = [ "uuid" ] }
serde = "1.0"
uuid = "0.8"
