[package]
name = "propolis-client"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
futures = "0.3"
http = "0.2"
hyper = "0.14"
libc = "0.2"
ring = "0.16"
schemars = { version = "0.8", features = [ "uuid" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.5", features = [ "max_level_trace", "release_max_level_debug" ] }
structopt = "0.3"
thiserror = "1.0"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
