[package]
name = "propolis-server"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>", "Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0"
# dropshot = "0.6"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
propolis = { path = "../propolis" }
propolis-server-lib = { path = "../propolis-server-lib" }
