[package]
name = "propolis"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.3"
bitstruct = "0.1"
byteorder = "1"
lazy_static = "1.4"
num_enum = "0.5"
thiserror = "1.0"
bhyve_api = { path = "../bhyve-api" }
dladm = { path = "../dladm" }
viona_api = { path = "../viona-api" }
usdt = "0.1.11"

[dev-dependencies]
tempfile = "3.2"
