[package]
name = "propolis"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.103"
bitflags = "1.3"
bitstruct = "0.1"
byteorder = "1"
lazy_static = "1.4"
num_enum = "0.5"
thiserror = "1.0"
bhyve_api = { path = "../bhyve-api" }
dladm = { path = "../dladm" }
viona_api = { path = "../viona-api" }
usdt = { version = "0.2.1", default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
crucible = { git = "https://github.com/oxidecomputer/crucible", rev = "4090a023b77dcab7a5000057cf2c96cdbb0469b6", optional = true }
anyhow = "1"
slog = "2.7"
serde = { version = "1" }
serde_arrays = "0.1"
erased-serde = "0.3"
serde_json = "1.0"
uuid = "0.8"

[dev-dependencies]
crossbeam-channel = "0.5"
tempfile = "3.2"
slog-term = "2.7"
slog-async = "2.7"
rand = "0.8"

[features]
default = ["dtrace-probes", "testonly-pci-enhanced-configuration"]
dtrace-probes = ["usdt/asm"]
testonly-pci-enhanced-configuration = []
