[package]
name = "propolis-server"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>", "Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "propolis_server"
path = "src/lib/lib.rs"

[[bin]]
name = "propolis-server"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
bytes = "1.1"
const_format = "0.2"
# dropshot = "0.6"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
futures = "0.3"
hyper =  "0.14"
num_enum = "0.5"
ron = "0.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.14"
tokio-util = { version = "0.6", features = ["codec"] }
toml = "0.5"
semver = { version = "1", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.7"
structopt = { version = "0.3", default-features = false }
propolis = { path = "../propolis", features = ["crucible"], default-features = false }
propolis-client = { path = "../client" }
uuid = "0.8"
base64 = "0.13"

[dev-dependencies]
hex = "0.4.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
ring = "0.16"
slog = { version = "2.5", features = [ "max_level_trace", "release_max_level_debug" ] }

[features]
default = ["dtrace-probes"]
dtrace-probes = ["propolis/dtrace-probes", "dropshot/usdt-probes"]
