[package]
name = "propolis-standalone"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.3"
libc = "0.2"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
propolis = { path = "../propolis", features = ["crucible"], default-features = false }
erased-serde = "0.3"
serde_json = "1.0"
slog = "2.7"
slog-async = "2.7"
slog-term = "2.7"

[features]
default = ["dtrace-probes"]
dtrace-probes = ["propolis/dtrace-probes"]
