[package]
name = "propolis-standalone"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
ctrlc = "3.2"
futures = "0.3"
libc = "0.2"
toml = "0.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
propolis = { path = "../propolis", default-features = false }
erased-serde = "0.3"
serde_json = "1.0"
slog = "2.7"
slog-async = "2.7"
slog-term = "2.7"

[features]
default = ["dtrace-probes"]
dtrace-probes = ["propolis/dtrace-probes"]
crucible = ["propolis/crucible"]
