[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "xtask"
test = false
doctest = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { version = "0.9" }
glob = { version = "0.3.1" }
globset = { version = "0.4.11" }
