[package]
name = "propolis_api_types"
version = "0.0.0"
license = "MPL-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crucible-client-types.workspace = true
propolis_types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
uuid.workspace = true
