[package]
name = "propolis-server-config"
version = "0.0.0"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_derive.workspace = true
toml.workspace = true
thiserror.workspace = true
