[package]
name = "propolis-server-config"
version = "0.0.0"
license = "MPL-2.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
cpuid_profile_config.workspace = true
propolis_api_types.workspace = true
serde.workspace = true
serde_derive.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
falcon = []
