[package]
name = "propolis_types"
version = "0.0.0"
authors = ["Greg Colombo <greg@oxidecomputer.com>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_test = "1.0.138"
