[package]
name = "propolis_types"
version = "0.0.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { workspace = true, features = [ "uuid1" ] }
serde.workspace = true

[dev-dependencies]
serde_test.workspace = true
