[package]
name = "rfb"
version = "0.0.0"
description = "Implementation of the RFB protocol (RFC 6143)"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "rfb"
path = "src/lib.rs"

# Prevent cargo from building shared code like a binary
[[example]]
name = "example-shared"
path = "examples/shared.rs"
crate-type = ["rlib"]

[[example]]
name = "example-socket"
path = "examples/socket.rs"

[[example]]
name = "example-websock"
path = "examples/websock.rs"
required-features = ["tungstenite"]


[dependencies]
ascii = { version = "1.1", default-features = false }
bitflags.workspace = true
futures.workspace = true
thiserror.workspace = true
rgb_frame.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-tungstenite = { workspace = true, optional = true }
zerocopy = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
dropshot.workspace = true
slog.workspace = true
slog-envlogger = "2.2.0"
slog-term.workspace = true

[features]
default = []
tungstenite = ["dep:tokio-tungstenite"]
