[package]
name = "viona_api"
version = "0.0.0"
license = "MPL-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
libc.workspace = true

# nvpair dependency only enabled when building on illumos to avoid any attempts
# to link to an absent libnvpair
[target.'cfg(target_os = "illumos")'.dependencies]
nvpair.workspace = true

[features]
falcon = []
