[package]
name = "propolis-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
propolis_types.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
base64.workspace = true
futures = { workspace = true, optional = true }
rand.workspace = true
ring.workspace = true
schemars = { workspace = true, features = [ "uuid1" ] }
serde.workspace = true
serde_json.workspace = true
slog = { workspace = true, features = [ "max_level_trace", "release_max_level_debug" ] }
thiserror.workspace = true
uuid = { workspace = true, features = [ "serde", "v4" ] }
progenitor = { workspace = true, optional = true }
tokio = { workspace = true, features = [ "net" ], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
crucible-client-types.workspace = true

[features]
default = []
generated = ["progenitor", "tokio", "tokio-tungstenite", "futures"]
generated-migration = ["generated"]
falcon = []
