[package]
name = "propolis-client"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
base64.workspace = true
crucible-client-types.workspace = true
futures.workspace = true
progenitor.workspace = true
propolis_api_types.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
schemars = { workspace = true, features = ["uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
